force-app/main/default/objects/Question_Answer_Option__c/Question_Answer_Option__c.object-meta.xml
<CustomObject>
    <description>Junction object between the Question and AnswerOption objects.</description>
    <label>Question Answer Option</label>
    <nameField>
        <label>Question Answer Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>