force-app/main/default/objects/Question_Answer_Option__c/fields/Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option__c</fullName>
    <label>Answer Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>Question Answer Options</relationshipLabel>
    <relationshipName>Question_Answer_Options</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>