force-app/main/default/objects/Question_Answer_Option__c/fields/Answer_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option_Id__c</fullName>
    <label>Answer Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Answer_Option_Questions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>