force-app/main/default/objects/Question_Answer_Option__c/fields/Questions_Id__c.field-meta.xml
<CustomField>
    <fullName>Questions_Id__c</fullName>
    <label>Questions</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Question Answer Options</relationshipLabel>
    <relationshipName>Question_Answer_Options</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>